--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     Mahanakorn
 </head>
 <body>
-    <h1>ควยเพชร</h1><br>
-    <h1>ควยยยย</h1>
+    <h1>Mahanakorn</h1><br>
+    <h1>Mahanakorn</h1><br>
+    <h2>Mahanakorn</h2><br>
+
+
 </body>
 
 </html>
